--- a/package.json
+++ b/package.json
@@ -51,13 +51,16 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.90.7",
+    "@types/file-saver": "^2.0.7",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cordova-plugin-fullscreen": "^1.3.0",
     "date-fns": "^3.6.0",
+    "docx": "^9.5.1",
     "embla-carousel-react": "^8.6.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.26",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
