latest updated by Bhushan

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/ios": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@capgo/capacitor-navigation-bar": "^8.0.3",
+    "@capgo/capacitor-updater": "^8.41.12",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -65,7 +66,6 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
-    "nodemailer": "^7.0.10",
     "pdfjs-dist": "^5.4.296",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
